[project]
name = "hydra-core"
version = "1.4.0.dev1"
description = "A framework for elegantly configuring complex applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Omry Yadan", email = "omry@fb.com"},
]
keywords = ["command-line", "configuration", "yaml", "tab-completion"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
dependencies = [
    "omegaconf>=2.3.0",
    "importlib-resources; python_version<'3.9'",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/hydra"

[project.entry-points.pytest11]
hydra_pytest = "hydra.extra.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["hydra"]

[tool.hatch.build.targets.wheel]
packages = ["hydra"]

[tool.hatch.build.targets.sdist]
include = [
    "/hydra",
    "/build_helpers",
    "/requirements",
    "/README.md",
    "/LICENSE",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
hydra-core = { path = ".", editable = true }

[tool.pixi.tasks]



[tool.towncrier]
    package = "hydra"
    package_dir = ""
    filename = "NEWS.md"
    directory = "news/"
    title_format = "{version} ({project_date})"
    template = "news/_template.rst"
    issue_format = "[#{issue}](https://github.com/facebookresearch/hydra/issues/{issue})"
    start_string = "<!-- TOWNCRIER -->\n"

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "api_change"
  name = "API Change (Renames, deprecations and removals)"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "plugin"
  name = "Plugins"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "config"
  name = "Configuration structure changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "maintenance"
  name = "Maintenance Changes"
  showcontent = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | hydra/grammar/gen
    | tools/configen/example/gen
    | .tox
    | .nox
    | website
    | .venv
    | _build
    | dist
    | build
    | contrib
  )
)
'''
